Add sensor manager, hardware test script, and setup script for Raspberry Pi; update GUI script for automated updates

--- a/hardware/pi/requirements_pi.txt
+++ b/hardware/pi/requirements_pi.txt
@@ -13,3 +13,9 @@ flask-cors==4.0.0
 flask-socketio==5.3.4
 python-socketio==5.9.0
 numpy==1.24.3
+
+adafruit-blinka
+redis
+paho-mqtt
+pyyaml
+eventlet
